# betanin

./: .dockerignore  .gitignore  .isort.cfg  .venv  CHANGELOG.md  Dockerfile  Dockerfile.dev  MANIFEST.in  NOTES.md  Pipfile  Procfile  README.md  _do_fix_formatting  _do_fix_imports  _do_mock_beets  _do_mock_client  _do_recreate_db  _do_tag_and_deploy  _docker_entry  a.py  app.py  create-database  deploy  docker-entry  fix-imports  fix_imports  mock-beets  notes  package-lock.json  print-numbers-slowly  pyproject.toml  requirements-dev.txt  requirements-docker.txt  requirements.txt  setup.py  start  start-shell  state  tag-and-deploy  todo  (+5 more)
.github/: dependabot.yml
.github/workflows/: debug-release.yaml  nightly-release.yaml  release.yaml  test.yaml
alpine/mp3gain/: APKBUILD
alpine/mp3val/: APKBUILD
app/: __init__.py  __main__.py  bet_config.py  config.py  config_transmission.py.sample  flask_config.py  paths.py
app/api/: __init__.py  beet_queue.py  events.py  models.py  paths.py  sheduler.py  state.py  status.py  torrent_scheduler.py  transmission.py
app/api/rest/: base.py  namespaces.py  resources.py  response_models.py
app/api/torrent_client/: __init__.py  transmission.py
app/client/: __init__.py
app/client/vue_app/: package-lock.json  package.json
betanin/: __init__.py  app.py  application.py  beets.py  blueprints.py  commands.py  config.py  context.py  entry_betanin.py  entry_shell.py  events.py  extensions.py  flask_config.py  main_config.py  minimal_context.py  models.py  notifications.py  paths.py  secret_key.py  status.py  system_info.py  version.py
betanin/api/: __init__.py  beet_queue.py  events.py  models.py  notifications.py  process_queue.py  security.py  status.py  torrent_scheduler.py
betanin/api/jobs/: fetch_torrents.py  import_torrents.py  make_sessions.py  process_torrents.py  register_notifications.py  retry_old_imports.py  serve_web.py
betanin/api/models/: line.py  remote.py  torrent.py
betanin/api/rest/: base.py  namespaces.py  resources.py  response_models.py
betanin/api/tasks/: make_all_sessions.py
betanin/api/torrent_client/: __init__.py  transmission.py
betanin/client/: __init__.py  package-lock.json  package.json  vue.config.js
betanin/client/public/: index.html  style.css
betanin/client/src/: authentication_utilities.js  backend.js  constants.js  filters.js  main.js  router.js  utilities.js
betanin/client/vue_app/: package-lock.json
betanin/config/: __init__.py  betanin.py  client.py  development.py  flask.py  production.py  secret_key.py
betanin/config/flask/: __init__.py  development.py  production.py
betanin/entry/: betanin.py  shell.py
betanin/jobs/: import_torrents.py  migrate_database.py  register_notifications.py  retry_old_imports.py  serve_web.py
betanin/orm/models/: line.py  torrent.py
betanin/rest/: base.py  namespaces.py
betanin/rest/models/: request.py  response.py
betanin/rest/resources/: authentication.py  beets.py  meta.py  (+3 more)
betanin/rest_models/: request.py  response.py
betanin/rest_resources/: authentication.py  beets.py  meta.py  notifications.py  torrent_clients.py  torrents.py
betanin_client/: .eslintrc.js  __init__.py  index.html  package-lock.json  package.json  prettier.config.js  vite.config.js  vue.config.js
betanin_client/public/: index.html
betanin_client/src/: authentication.js  authentication_utilities.js  backend.js  constants.js  filters.js  main.js  router.js  utilities.js
betanin_migrations/: __init__.py  env.py  script.py.mako
betanin_migrations/versions/: 6017dab0ffd9.py  6017dab0ffd9_.py  8a50d0ea6216_.py  b189d9005763_.py  f7638c143743_.py  fb545157ac57_.py
hooks/: build
migrations/: env.py
migrations/versions/: 007eb004488a_.py  12e066a1dad7_.py  2ab7c6795dea_.py  373cfc3a43e5_.py  4e33efaec78a_.py  4fcd3802c116_.py  53f5eb923249_.py  7ab0dc3fbc15_.py  8a50d0ea6216_.py  90e086bce30a_.py  9c5e830ec21b_.py  9cb8f6783bf5_.py  b450b77ae1fa_.py  d5fe9daf40d5_.py  e36a28bcd63e_.py
mock_transmission_server/: __init__.py  response.py
root/: _docker_entry
scripts/: mock_beets  mock_beets_colour  mock_transmission_done
tests/: test_api.py  test_client.py
utilities/mock_transmission_server/: __init__.py  response.py
(+114 files in other folders)
