[project]
name = "betanin"
authors = [
    { name="Senan Kelly", email="senan@senan.xyz" },
]
description = "beets based mitm of your torrent client and music player"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]
dependencies = [
    "beets",
    "apprise",
    "alembic",
    "click",
    "Flask <3.0.0",
    "Flask-Cors",
    "Flask-JWT-Extended",
    "Flask-Migrate",
    "flask-restx",
    "Flask-SocketIO",
    "Flask-SQLAlchemy",
    "gevent",
    "pyxdg",
    "loguru",
    "ptyprocess",
    "python-engineio",
    "python-socketio",
    "SQLAlchemy",
    "SQLAlchemy-Utils",
    "toml",
]

[project.optional-dependencies]
dev = [
    "isort >= 4.3.1",
    "toml",
    "pyproject",
    "black",
    "autoflake",
    "pyright",
    "pylint",
]

[project.urls]
"Homepage" = "https://github.com/sentriz/betanin"
"Bug Tracker" = "https://github.com/sentriz/betanin/issues"

[project.scripts]
betanin = "betanin.entry.betanin:main"
betanin-shell = "betanin.entry.shell:main"

[tool.isort]
force_single_line = true
import_heading_firstparty = "betanin"
import_heading_stdlib = "standard library"
import_heading_thirdparty = "3rd party"
known_first_party = "betanin"
length_sort = true
lines_after_imports = 2
multi_line_output = 3
sections = "STDLIB,THIRDPARTY,FIRSTPARTY"

[tool.black]
line-length = 79
target_version = ['py39']

[tool.pylint.'messages control']
# `no-member` because: https://github.com/PyCQA/pylint/issues/2917
# `*-docstring` because lazy (at the moment)
# `unused-import` because the isort/autoflake is doing this already the exception comment differs
# `wrong-import-position` for the same reason
enable = "all"
disable = """\
	missing-module-docstring,\
	missing-class-docstring,\
	missing-function-docstring,\
	no-member,\
	fixme,\
	too-few-public-methods,\
	unused-import,\
	wrong-import-position\
"""

[tool.pyright]
include = ["betanin"]
venv = "betanin"
pythonVersion = "3.9"
pythonPlatform = "Linux"
exclude = ["**/betanin_migrations", "setup.py"]

[tool.setuptools.dynamic]
version = {file = "version.txt"}

[tool.setuptools.packages.find]
where = ["."]
include = ["betanin*"]
exclude = []
namespaces = false
