[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "betanin"
authors = [
    { name="Senan Kelly", email="senan@senan.xyz" },
]
description = "beets based mitm of your torrent client and music player"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]
dependencies = [
    "beets",
    "apprise",
    "alembic",
    "click",
    "Flask",
    "Flask-Cors",
    "Flask-JWT-Extended",
    "Flask-Migrate",
    "flask-restx",
    "Flask-SocketIO",
    "Flask-SQLAlchemy",
    "gevent",
    "pyxdg",
    "loguru",
    "ptyprocess",
    "python-engineio",
    "python-socketio",
    "SQLAlchemy",
    "SQLAlchemy-Utils",
    "tomli-w",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pyright",
]

[project.urls]
"Homepage" = "https://github.com/sentriz/betanin"
"Bug Tracker" = "https://github.com/sentriz/betanin/issues"

[project.scripts]
betanin = "betanin.entry.betanin:main"
betanin-shell = "betanin.entry.shell:main"

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"betanin/entry/betanin.py" = ["E402"]
"betanin/jobs/import_torrents.py" = ["E402", "I001"]

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["betanin"]
lines-after-imports = 2

[tool.pyright]
include = ["betanin"]
venv = "betanin"
pythonVersion = "3.12"
pythonPlatform = "Linux"
exclude = ["**/betanin_migrations"]

[tool.setuptools.dynamic]
version = {file = "version.txt"}

[tool.setuptools.packages.find]
where = ["."]
include = ["betanin*"]
exclude = []
namespaces = false
